// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LazyLoader by default should render the right structure 1`] = `
<LazyLoader
  lazyComponent={[Function]}
>
  <div />
  <div />
</LazyLoader>
`;

exports[`LazyLoader if \`componentProps\` !== undefined should render the right structure 1`] = `
<LazyLoader
  componentProps={
    Object {
      "mad": "props",
    }
  }
  lazyComponent={[Function]}
>
  <div />
  <Component
    mad="props"
  >
    <div>
      🚸
    </div>
  </Component>
  <div />
</LazyLoader>
`;

exports[`LazyLoader if \`lazyProps\` is passed by default should render the right structure 1`] = `
<LazyLoader
  lazyComponent={[Function]}
  lazyProps={
    Object {
      "whut": "whut",
    }
  }
>
  <div />
  <Component>
    <div>
      🚸
    </div>
  </Component>
  <div />
</LazyLoader>
`;

exports[`LazyLoader if \`lazyProps\` is passed if \`shouldRender\` === true should render the right structure 1`] = `
<LazyLoader
  lazyComponent={[Function]}
  lazyProps={
    Object {
      "whut": "whut",
    }
  }
>
  <div />
  <Component>
    <div>
      🚸
    </div>
  </Component>
  <div />
</LazyLoader>
`;

exports[`LazyLoader if \`shouldRender\` === true should render the right structure 1`] = `
<LazyLoader
  lazyComponent={[Function]}
>
  <div />
  <Component>
    <div>
      🚸
    </div>
  </Component>
  <div />
</LazyLoader>
`;
